[package]
name = "plonky2-circuit-serializer"
version = "0.1.0"
edition = "2021"


[dependencies]
plonky2 = { git = "https://github.com/Electron-Labs/plonky2", branch = "derive_bn254_from_ff" }
plonky2_crypto = { git = "https://github.com/Electron-Labs/plonky2-crypto" }
plonky2_ed25519 = { git = "https://github.com/Electron-Labs/plonky2_ed25519" }
log = { version = "0.4.14", default-features = false }
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
multithreaded-fs = { git = "https://github.com/Electron-Labs/multithreaded-fs.git" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
tracing-test = "0.2.4"